--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-moby (21.0.1) UNRELEASED; urgency=low
+docker-engine (21.0.1) UNRELEASED; urgency=low
 
   * Initial release. Closes: #nnnn
     <nnnn is the bug number of your ITP>
